move out EquityCurveMode